# tic-tac-toe-cpp

./: CMakeLists.txt  README.md  ttt.model
include/: Block.hpp  Game.hpp  GameClasses.hpp  LaptopAIGame.hpp  LaptopGame.hpp
src/: Game.cpp  main.cpp
